PR 55325: unify both pvo pools (for managed and unmanaged pages). Analyzis by rin, fix suggested by chs.